fix mobile spacing and font size

--- a/src/home.css
+++ b/src/home.css
@@ -7,12 +7,22 @@
 
 .hero-text {
   font-size: 3.75rem;
+  margin-top: 0;
+}
+
+.hero-image {
+  width: 500px;
+  max-width: 100%;
 }
 
 /* small screens */
 @media (max-width: 800px) {
   .everything {
     max-width: 96%;
+  }
+
+  .hero-text {
+    font-size: 3rem;
   }
 }
 
