--- a/src/util.css
+++ b/src/util.css
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
+  padding-top: 40px;
   background-color: #31444A;
   color: ivory;
 }
